# Claudedemo

./: CLAUDE.md  LICENSE  Makefile  README.md  TEST_REFACTORING_SUMMARY.md  build.sh  demo_cdf_extraction.py  explore_cdf.py  generate-docs.sh  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml
docs/: api-reference.md  cli-reference.md  configuration.md  contributing.md  development.md  features.md  index.md  installation.md  license.md  quick-start.md  roadmap.md
src/crump/: __init__.py  cdf_extractor.py  cli.py  cli_extract.py  cli_inspect.py  cli_prepare.py  cli_sync.py  database.py  type_detection.py
src/data_sync/: __init__.py  cdf_extractor.py  cdf_reader.py  cli.py  cli_extract.py  cli_inspect.py  cli_prepare.py  cli_sync.py  config.py  core.py  database.py  type_detection.py
src/myapp/: __init__.py  cli.py  core.py
tests/: conftest.py  custom_functions.py  db_test_utils.py  test_auto_detect.py  test_cdf_e2e.py  test_cdf_extract.py  test_cli.py  test_config.py  test_core.py  test_database_integration.py  test_dry_run.py  test_helpers.py  test_inspect.py  test_prepare.py  test_type_detection.py
tests/data/: imap_mag_l1c_norm-magi_20251010_v001.cdf  solo_L2_mag-rtn-normal-1-minute-internal_20241225_V00.cdf  solo_L2_mag-rtn-normal-1-minute-internal_20241225_V00.cdf.txt
